# dake-box

./: .gitignore  README.md  dev.sh  main.py  pyproject.toml  requirements.txt
static/: index.css  index.html  index.js
